--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -12,7 +12,7 @@
   </div>
 
   <p id="demo">
-    This is me testing out a lil html file
+    Hello Lynn and Alen 
   </p>
 
   <button class="btn btn-default" type="button" onclick="myFunction()">
