made my first change

--- a/project/html/pages/index.ejs
+++ b/project/html/pages/index.ejs
@@ -8,11 +8,11 @@
   <!-- the classes 'page-header' and 'btn btn-default' create bootstrap components.  -->
   <!-- Check out more components here: http://getbootstrap.com/components/ -->
   <div class="page-header">
-    <h1>YOYO web apps are so cool kekeke </h1>
+    <h1>YOYO Lynn and Alen kekeke </h1>
   </div>
 
   <p id="demo">
-    Hello Lynn and Alen 
+    My fist testing web page  
   </p>
 
   <button class="btn btn-default" type="button" onclick="myFunction()">
