--- a/project/css/main.css
+++ b/project/css/main.css
@@ -6,15 +6,15 @@ body {
 
 h1 {
   font-family: 'Lobster', cursive;
-  color: orange;
+  color: pink;
 }
 
 p {
   font-family: "Courier New";
-  font-size: 30px;
+  font-size: 70px;
 }
 
 #doge-image img {
-  height: 300px;
-  margin-top: 5px;
+  height: 3px;
+  margin-top: 3px;
 }
